# proctor

./: .env.example  .gitignore  .impeccable.md  README.md  bts.jsonc  docker-compose.yml  package-lock.json  package.json  skills-lock.json  tsconfig.json
apps/agent/: README.md  agent.py  api_client.py  assessment.py  interview_flow.py  livekit.toml  prompts.py  pyproject.toml  requirements.txt
apps/server/: package.json  tsconfig.json  tsdown.config.ts
apps/server/src/: index.ts
apps/server/src/middleware/: auth.ts
apps/server/src/routes/: assessment.ts  interview.ts  livekit.ts
apps/server/src/services/: assessment.ts
apps/web/: cloudflare-env.d.ts  components.json  next.config.ts  package.json  tsconfig.json
apps/web/src/: index.css
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/admin/: admin-dashboard.tsx  page.tsx
apps/web/src/app/admin/[id]/: page.tsx  review-detail.tsx
apps/web/src/app/api/assessments/[[...path]]/: route.ts
apps/web/src/app/api/auth/[...all]/: route.ts
apps/web/src/app/api/interviews/[[...path]]/: route.ts
apps/web/src/app/dashboard/: dashboard.tsx  page.tsx
apps/web/src/app/interview/: page.tsx  start-interview.tsx
apps/web/src/app/interview/[id]/: interview-complete.tsx  interview-room.tsx  page.tsx
apps/web/src/components/: assessment-card.tsx  audio-visualizer.tsx  header.tsx  mode-toggle.tsx  providers.tsx  score-badge.tsx  sign-in-form.tsx  sign-up-form.tsx  transcript-viewer.tsx  user-menu.tsx
apps/web/src/lib/: api-proxy.ts  auth-client.ts  auth-server.ts  format.ts  livekit.ts  styles.ts
(+1 files in other folders)
