[project]
name = "proctor-agent"
version = "0.1.0"
description = "AI Tutor Screening Agent for Cuemath"
requires-python = ">=3.10"
dependencies = [
    "livekit-agents>=1.0",
    "livekit-plugins-openai>=1.0",
    "livekit-plugins-silero>=1.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.scripts]
agent = "agent:main"
